--- a/style.css
+++ b/style.css
@@ -120,6 +120,62 @@ header nav ul li a {
     height: auto;
 }
 
+/*------------------- Trending Games ------------------- */
+
+.title-trending {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 70px;
+}
+
+.title-trending h2 {
+    margin: 0;
+    margin-right: 10px;
+}
+
+.button-SeeAll {
+    background-color: #422F9C;
+    color: white;
+    padding: 20px 20px;
+    border-radius: 10px;
+    text-align: center;
+    text-decoration: none;
+    border: none;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background 0.3s;
+    margin-left: 10px;
+}
+
+.images-trending {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    padding: 0;
+    margin: 0;
+}
+
+.followers {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    padding: 0;
+    margin: 0;
+}
+
+.fire-list {
+    list-style-type: none;
+    display: flex;
+    margin-top: 20px;
+    align-items: center;
+}
+
+.fire-list img {
+    margin-right: 10px;
+}
+
 /*------------------- footer ------------------- */
 
 footer {
