--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     background-color: #39289F;
     color: white;
+    position: relative;
 }
 
 /*------------------- header ------------------- */
@@ -27,6 +28,10 @@ header {
     list-style: none;
     margin: 0;
     z-index: 10;
+}
+
+.nav li {
+    margin-right: 30px;
 }
 
 .nav a {
@@ -74,7 +79,8 @@ header {
     text-decoration: none;
     display: inline-block;
     margin-right: 20px;
-    cursor: pointer
+    cursor: pointer;
+    margin-right: 0;
 }
 
 .logo {
@@ -202,6 +208,64 @@ header {
 
 .fire-list img {
     margin-right: 10px;
+}
+
+/*------------------- Spider-man Banner ------------------- */
+
+.spider {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    margin-top: 5%;
+}
+
+.spider h2 {
+    text-align: center;
+    margin-bottom: 20px;
+    line-height: 2.0;
+}
+
+.spider-content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+}
+
+.spider-text {
+    width: 100%;
+    padding: 20px;
+}
+
+.spider-text h3 {
+    margin-bottom: 10px;
+}
+
+.spider-text p {
+    margin-bottom: 20px;
+}
+
+.spider-images {
+    position: relative;
+    width: 100%;
+}
+
+.img-banner {
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+    z-index: 1;
+}
+
+.img-balls {
+    position: absolute;
+    top: 50%;
+    right: 10%;
+    transform: translateY(-50%);
+    max-width: 20%;
+    height: auto;
+    z-index: 0;
 }
 
 /*------------------- footer ------------------- */
