--- a/style.css
+++ b/style.css
@@ -268,6 +268,54 @@ header {
     z-index: 0;
 }
 
+/*------------------- mountain ------------------- */
+.mountain {
+    background-image: url("images/img-background.png");
+}
+
+.text-mountain {
+    text-align: center;
+    margin-bottom: 20px;
+    line-height: 2.0;
+}
+
+.text-mountain h2{
+    margin-bottom: 50px;
+}
+
+.icons-mountain-top {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    padding: 0;
+    margin: 0;
+}
+
+.text-top {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    padding: 0;
+    margin: 0;
+}
+
+.top-list {
+    list-style-type: none;
+    display: flex;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    align-items: center;
+}
+
+.arrow-top {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    padding: 0;
+    margin: 0;
+}
+
+icons
 /*------------------- footer ------------------- */
 
 footer {
