--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@ header {
     align-items: center;
     position: relative;
     z-index: 10;
+    font-family: "Poppins", sans-serif;
+    font-weight: 100;
+    font-style: normal;
 }
 
 .logo-link {
@@ -110,6 +113,10 @@ header {
     align-items: center;
     justify-content: space-between;
     padding: 30px;
+    font-family: "Rubik", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 100;
+    font-style: normal;
 }
 
 .text-controller {
@@ -155,6 +162,12 @@ header {
 }
 
 /*------------------- Trending Games ------------------- */
+.trending-games {
+    font-family: "Rubik", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 100;
+    font-style: normal;
+}
 
 .title-trending {
     display: flex;
@@ -218,6 +231,9 @@ header {
     align-items: center;
     padding: 20px;
     margin-top: 5%;
+    font-family: "Poppins", sans-serif;
+    font-weight: 100;
+    font-style: normal;
 }
 
 .spider h2 {
@@ -271,6 +287,9 @@ header {
 /*------------------- mountain ------------------- */
 .mountain {
     background-image: url("images/img-background.png");
+    font-family: "Poppins", sans-serif;
+    font-weight: 100;
+    font-style: normal;
 }
 
 .text-mountain {
@@ -323,7 +342,9 @@ footer {
     color: white;
     padding: 20px;
     text-align: left;
-    font-size: 15px;
+    font-family: "Poppins", sans-serif;
+    font-weight: 100;
+    font-style: normal;
 }
 
 .footer-content {
