--- a/styles/home.css
+++ b/styles/home.css
@@ -1,109 +1,8 @@
 body {
     margin: 0;
-    background-color: #39289F;
+    background: linear-gradient(180deg, #39289F, #422F9C);
     color: white;
     position: relative;
-}
-
-/*------------------- header ------------------- */
-header {
-    background-color: #39289F;
-    padding: 1rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: relative;
-    z-index: 10;
-    font-family: "Poppins", sans-serif;
-    font-weight: 100;
-    font-style: normal;
-}
-
-.logo-link {
-    text-decoration: none;
-    color: inherit;
-}
-
-.nav {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: flex-end;
-    list-style: none;
-    margin: 0;
-    z-index: 10;
-}
-
-.nav li {
-    margin-right: 30px;
-}
-
-.nav a {
-    text-decoration: none;
-    display: block;
-    padding: 1em;
-    color: white;
-}
-
-.nav a:hover {
-    background: orange;
-    text-decoration: underline
-}
-
-@media all and (max-width: 800px) {
-    .nav {
-        justify-content: space-around;
-    }
-}
-
-@media all and (max-width: 600px) {
-    .nav {
-        flex-flow: column wrap;
-        padding: 0;
-    }
-
-    .nav a {
-        text-align: center;
-        padding: 10px;
-        border-top: 1px solid rgba(255, 255, 255, 0.3);
-        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-    }
-
-    .nav li:last-of-type a {
-        border-bottom: none;
-    }
-}
-
-.contact-button {
-    background-color: #FA9021;
-    color: white;
-    padding: 15px 30px;
-    border-radius: 5px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    margin-right: 20px;
-    cursor: pointer;
-    margin-right: 0;
-}
-
-.logo {
-    font-size: 30px;
-    font-weight: bold;
-    color: white;
-}
-
-.img-controller {
-    position: absolute;
-    top: 400%;
-    right: -90px;
-    transform: translateY(-50%);
-    z-index: 0;
-    max-width: 60%;
-}
-
-.img-controller img {
-    max-width: 100%;
-    height: auto;
 }
 /*-------------------main---------------------*/
 
@@ -411,15 +310,15 @@ header {
 }
 
 .box-subscription {
-    background-color: #1c150d; /* Cor de fundo da caixa de inscrição */
+    background-color: #1c150d;
     border-radius: 10px;
-    padding: 40px; /* Aumenta o padding para tornar a caixa maior */
+    padding: 40px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    max-width: 1200px; /* Aumenta a largura máxima da caixa */
-    margin: 0 auto; /* Centraliza a caixa */
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 .text-subscription {
@@ -442,16 +341,16 @@ header {
     align-items: center;
     position: relative;
     width: 100%;
-    max-width: 500px; /* Aumenta a largura máxima do input */
+    max-width: 500px;
 }
 
 .input-subscription input[type="email"] {
     width: 100%;
-    padding: 20px; /* Ajusta o padding */
+    padding: 20px;
     border: none;
     border-radius: 5px;
     font-size: 14px;
-    box-sizing: border-box; /* Inclui padding e border na largura total */
+    box-sizing: border-box;
 }
 
 .input-subscription button {
@@ -460,7 +359,7 @@ header {
     top: 0;
     bottom: 0;
     padding:  0 20px;
-    background-color: #f28d17; /* Cor do botão */
+    background-color: #f28d17;
     border: none;
     border-radius: 10px;
     color: white;
@@ -469,70 +368,4 @@ header {
     height: 77%; 
     margin-top: 1%;
     margin-right: 1%;
-}
-
-
-/*------------------- footer ------------------- */
-
-footer {
-    background-color: black;
-    color: white;
-    padding: 20px;
-    text-align: left;
-    font-family: "Poppins", sans-serif;
-    font-weight: 100;
-    font-style: normal;
-}
-
-.footer-content {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-
-.footer-text p {
-    margin: 50px 0 50px 0;
-    word-break: break-word;
-}
-
-.footer-links ul,
-.footer-contact p {
-    margin: 0;
-    padding: 0;
-}
-
-.footer-links ul {
-    list-style-type: none;
-}
-
-.footer-links ul li {
-    margin-bottom: 10px;
-}
-
-.footer-links ul li a {
-    color: white;
-    text-decoration: none;
-    display: block;
-    padding: 5px 0;
-}
-
-.footer-links ul li a:hover {
-    text-decoration: underline;
-}
-
-.footer-bottom {
-    text-align: center;
-    border-top: 1px solid #333;
-    padding-top: 10px;
-    margin-top: 20px;
-    width: 100%;
-    clear: both;
-}
-
-.footer-contact p {
-    margin-top: 50px;
-}
-
-.footer-social {
-    margin-top: 8%;
 }
