--- a/styles/home.css
+++ b/styles/home.css
@@ -185,7 +185,7 @@ body {
 
 /*------------------- mountain ------------------- */
 .mountain {
-    background-image: url("images/img-background.png");
+    background-image: url("../images/img-background.png");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
