--- a/styles/home.css
+++ b/styles/home.css
@@ -16,6 +16,7 @@ body {
     font-optical-sizing: auto;
     font-weight: 100;
     font-style: normal;
+    margin-left: 6%;
 }
 
 .text-controller {
@@ -56,6 +57,10 @@ body {
     max-width: 200px;
 }
 
+.controller-button:hover {
+    background: linear-gradient(45deg, #FB9E3C, #FA8305);
+}
+
 .text-controller h1, .text-controller p, .controller-button {
     margin-bottom: 50px; 
 }
@@ -72,7 +77,12 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 70px;
+    padding: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1190px;
+    width: 120%;
+    box-sizing: border-box;
 }
 
 .title-trending h2 {
@@ -95,12 +105,24 @@ body {
     margin-left: 10px;
 }
 
+.button-SeeAll:hover {
+    background: orange;
+    text-decoration: underline
+}
+
 .images-trending {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
     padding: 0;
-    margin: 0;
+    margin: 0 auto;
+    max-width: 1190px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.images-trending img {
+    margin: 10px;
 }
 
 .followers {
@@ -108,7 +130,8 @@ body {
     flex-flow: row wrap;
     justify-content: space-around;
     padding: 0;
-    margin: 0;
+    margin: 0 auto;
+    max-width: 1190px;
 }
 
 .fire-list {
@@ -280,9 +303,13 @@ body {
     margin-left: 10px;
 }
 
+.button-project:hover {
+    background: orange;
+    text-decoration: underline
+}
 /*------------------- subscription ------------------- */
 .subscription {
-    padding: 20px;
+    padding: 30px;
     box-sizing: border-box;
     display: flex;
     justify-content: center;
@@ -299,7 +326,7 @@ body {
 .tittle-subscription {
     text-align: left;
     margin-bottom: 20px;
-    margin-left: 90px;
+    margin-left: 140px;
     margin-bottom: 5%;
 }
 
@@ -316,12 +343,12 @@ body {
 .box-subscription {
     background-color: #1c150d;
     border-radius: 10px;
-    padding: 40px;
+    padding: 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    max-width: 1200px;
+    max-width: 1050px;
     margin: 0 auto;
 }
 
@@ -337,7 +364,7 @@ body {
 
 .text-subscription p {
     margin: 0;
-    font-size: 19px;
+    font-size: 17px;
 }
 
 .input-subscription {
@@ -350,9 +377,9 @@ body {
 
 .input-subscription input[type="email"] {
     width: 100%;
-    padding: 20px;
+    padding: 15px;
     border: none;
-    border-radius: 5px;
+    border-radius: 6px;
     font-size: 14px;
     box-sizing: border-box;
 }
