--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,5 +1,3 @@
-/*------------------- footer ------------------- */
-
 footer {
     background-color: black;
     color: white;
@@ -16,9 +14,18 @@ footer {
     flex-wrap: wrap;
 }
 
+.footer-text {
+    margin-top: 2%;
+    margin-left: 9%; 
+}
+
 .footer-text p {
-    margin: 50px 0 50px 0;
+    margin: 9px 0 75px 0;
     word-break: break-word;
+}
+
+.footer-links {
+    margin-top: 2%;
 }
 
 .footer-links ul,
@@ -55,10 +62,14 @@ footer {
     clear: both;
 }
 
+.footer-contact {
+    margin-top: 2%;
+}
 .footer-contact p {
-    margin-top: 50px;
+    margin: 9px 0 65px 0;
 }
 
 .footer-social {
-    margin-top: 8%;
+    margin-right: 5%;
+    margin-top: 12%;
 }
