--- a/styles/home.css
+++ b/styles/home.css
@@ -4,7 +4,7 @@ body {
     color: white;
     position: relative;
 }
-/*-------------------introduction---------------------*/
+
 .controller {
     display: flex;
     align-items: center;
@@ -63,7 +63,7 @@ body {
     margin-bottom: 50px; 
 }
 
-/*------------------- Trending Games ------------------- */
+
 .trending-games {
     font-family: "Rubik", sans-serif;
     font-optical-sizing: auto;
@@ -143,7 +143,6 @@ body {
     margin-right: 10px;
 }
 
-/*------------------- Spider-man Banner ------------------- */
 
 .spider {
     display: flex;
@@ -205,7 +204,6 @@ body {
     z-index: 0;
 }
 
-/*------------------- mountain ------------------- */
 .mountain {
     background-image: url("../images/img-background.png");
     background-size: cover;
@@ -234,20 +232,52 @@ body {
     margin-bottom: 50px;
 }
 
-.icons-mountain {
+.icons-mountain-top {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    width: 100%;
-}
-
-.icons-mountain img {
-    max-width: 100%;
-    height: auto;
-    margin-top: 100px;
+    align-items: center;
+    gap: 150px;
+    padding: 20px;
     margin-bottom: 100px;
 }
 
-/*------------------- Our recent projects ------------------- */
+.icons-mountain-bot {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 100px;
+    padding: 20px;
+    margin-bottom: 100px;
+}
+
+.item-mountain {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    width: 150px;
+}
+
+.item-mountain img {
+    width: 80px;
+    height: auto;
+    margin-bottom: 10px;
+}
+
+.item-mountain p {
+    margin: 5px 0;
+    color: white;
+}
+
+.item-mountain .arrow {
+    width: 20px;
+    height: auto;
+    margin-top: 10px;
+}
+
+
 .recent-project {
     font-family: "Poppins", sans-serif;
     font-weight: 100;
